# CMake_tutorial_4_InstallLibs_a

./: CMakeLists.txt  Readme.md  tutorial_function1Config.cmake.in
function1/: CMakeLists.txt  function1.cpp
